# AI-IRR

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
api/: __init__.py  dependencies.py  main.py  requirements.txt  schemas.py  settings.py
app/: __init__.py  api_proxy_client.py  bgpq4_client.py  cli.py  config.py  diff.py  logger.py  radb_client.py  store.py  teams.py  ticketing.py
data/: irr.sqlite
docs/: MULTI_IRR_SOURCES.md
docs/plans/: 2026-04-15-dashboard-ui-design.md  2026-04-15-dashboard-ui-plan.md  2026-04-15-dashboard-ui.md
frontend/: README.md  index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  index.ts  types.ts
frontend/src/components/: Layout.tsx  PageHeader.tsx
frontend/src/pages/: DiffsPage.tsx  OverviewPage.tsx  PlaceholderPage.tsx  PrefixesPage.tsx  TargetsPage.tsx  TicketsPage.tsx
tests/: __init__.py  test_aggregation.py  test_alert_bug.py  test_api.py  test_bgpq4_client.py  test_cli.py  test_config.py  test_diff.py  test_radb_client.py  test_store.py  test_teams.py  test_ticketing.py
